# ldg-ssm

./: .gitignore  Dockerfile  README.md  makefile
app/: .clang-format  CMakeLists.txt
app/include/: ldg_generator.hpp  supertiles_DistFunc.h  supertiles_DistFunc.hpp  supertiles_DrawBase.h  supertiles_DrawCairo.h  supertiles_DrawCairo.hpp  supertiles_PO.h  supertiles_PO.hpp  supertiles_QuadTree.h  supertiles_QuadTree.hpp  supertiles_assignPartition.h  supertiles_drawTiles.h  supertiles_drawTiles.hpp  supertiles_place.h  supertiles_place.hpp  supertiles_place_DrawTile.h  supertiles_place_DrawTile.hpp  supertiles_place_LevelIndicator.h  supertiles_place_NodeLeafCounts.hpp  supertiles_place_adaptAssignment.h  supertiles_place_assignGroupHungarian_.hpp  supertiles_place_assignGroupPermutations.h  supertiles_place_assignGroupPermutations.hpp  supertiles_place_assignGroupPermutations_.h  supertiles_place_cost.h  supertiles_place_cost.hpp  supertiles_place_data.h  supertiles_place_init.h  supertiles_place_log.h  supertiles_place_log.hpp  supertiles_place_presentation.h  supertiles_place_presentation.hpp  supertiles_place_useCases.h
app/include/adapter/: data.hpp  data_layout.hpp  storage.hpp
app/include/ldg/: tree_functions.hpp
app/include/ldg/model/: assignment.hpp  cell_position.hpp  parent_type.hpp  quad_assignment_tree.hpp  quadrant.hpp
app/include/ldg/util/: image.hpp  math.hpp  tree_functions.hpp  vector_math.hpp
app/include/ldg/util/metric/: cosine_distance.hpp  disparity.hpp  distance_function_types.hpp  euclidean_distance.hpp  hierarchy_neighborhood_distance.hpp  normalized_euclidean_distance.hpp
app/include/ldg/util/tree_traversal/: row_major_iterator.hpp  tree_walker.hpp
app/include/model/: config_types.hpp  program_options.hpp
app/include/model/place/: plan.hpp  term.hpp
app/include/program/: logger.hpp  random.hpp  run.hpp  schedule.hpp  sort_options.hpp
app/include/program/export/: export.hpp  export_configuration.hpp  export_settings.hpp  final_export_configuration.hpp  image.hpp  visualization_configuration.hpp
app/include/program/input/: input.hpp  input_args.hpp  input_configuration.hpp  input_type.hpp
app/include/self_sorting_map/: exchanges.hpp  method.hpp  partitions.hpp  targets.hpp
app/include/shared/: tree_functions.hpp
app/include/shared/model/: assignment.hpp  cell_position.hpp  quad_assignment_tree.hpp  quadrant.hpp
app/include/shared/util/: distance_functions.hpp  image.hpp  math.hpp  vector_math.hpp
app/include/shared/util/metric/: hierarchy_neighborhood_distance.hpp
app/include/shared/util/tree_traversal/: row_major_iterator.hpp  tree_walker.hpp
app/include/supertiles/: ldg_core.hpp
app/include/supertiles/model/: config_types.hpp  distance_function.hpp  draw_base.hpp  draw_cairo.hpp  program_options.hpp  quad_tree.hpp
app/include/supertiles/model/place/: cost.hpp  draw_options.hpp  draw_tile.hpp  level_indicator.hpp  log.hpp  node_leaf_counts.hpp  plan.hpp  term.hpp
app/include/supertiles/util/: adapt_assignment.hpp  assign_group_hungarian.hpp  assign_group_permutations.hpp  create_assign_group_permutations.hpp  draw_tiles.hpp
app/include/supertiles/util/place/: data.hpp  init.hpp  presentation.hpp  use_cases.hpp
app/include/util/: create_assign_group_permutations.hpp  draw_tiles.hpp
app/include/util/place/: presentation.hpp
app/src/: ldg_generator.cpp  ldg_ssm.cpp  main.cpp  new_ldg.cpp  supertiles_place.cpp
app/src/model/: config_types.cpp  distance_function.cpp  draw_base.cpp  draw_cairo.cpp  program_options.cpp  quad_tree.cpp
app/src/model/place/: cost.cpp  draw_options.cpp  draw_tile.cpp  level_indicator.cpp  log.cpp  node_leaf_counts.cpp  plan.cpp  term.cpp
app/src/self_sorting_map/: method.cpp
app/src/shared/model/: assignment.cpp  quad_assignment_tree.cpp
app/src/shared/util/: math.cpp
app/src/shared/util/metric/: hierarchy_neighborhood_distance.cpp
app/src/shared/util/tree_traversal/: row_major_iterator.cpp  tree_walker.cpp
app/src/supertiles/: ldg_core.cpp
app/src/util/: adapt_assignment.cpp  assign_group_hungarian.cpp  assign_group_permutations.cpp  assign_partition.cpp  create_assign_group_permutations.cpp  draw_tiles.cpp
app/src/util/place/: data.cpp  init.cpp  presentation.cpp  use_cases.cpp
data/input/: example_data.json  example_visualization.json
scripts/: example.sh  run_examples_1k.sh  run_examples_full.sh  run_visualize_ssm.sh  translate_ldg_assignment.sh
scripts/tests/: core_scaling.sh  non_pow2_grids.sh  parameter_tuning.sh  partition_swapping.sh  randomization_stability.sh  time_scaling.sh
src/: CMakeLists.txt
